<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_logo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="10"
                android:background="@color/red"
                android:text="@string/pcs"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/pcs_cloud"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/username_hint" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/password"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/violet"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/forgot"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>